--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.482.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.2",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
