--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.482.0",
     "nanoid": "^5.1.5",
