--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "6.7.0",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
